# snake

./: .gitignore  CMakeLists.txt
ext/glad/glad/include/glad/: gl.h
shaders/: main.frag  main.vert
src/: base.c  base.h  file.c  file.h  food.c  food.h  game.c  game.h  main.c  mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h  snake.c  snake.h
